17288
```scala
$ cat test/files/run/my-test-that-doesnt-compile.scala
Gimme the compilation erroooorrrrr!!!

$ test/partest --show-log test/files/run/my-test-that-doesnt-compile.scala

Testing individual files
testing: [...]/files/run/my-test-that-doesnt-compile.scala            [FAILED]
1 of 1 tests failed (elapsed time: 00:00:00)

$ cat test/files/run/my-test-that-doesnt-compile-run.log 
my-test-that-doesnt-compile.scala:1: error: expected class or object definition
Gimme the compilation erroooorrrrr!!!
^
one error found
```

Grrrrr...
